// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Tag Matches snapshot when passed all props 1`] = `
<styled.span
  color="jest-auto-snapshots String Fixture"
  textColor="jest-auto-snapshots String Fixture"
>
  <NodeFixture />
</styled.span>
`;

exports[`jest-auto-snapshots > Tag Matches snapshot when passed only required props 1`] = `
<styled.span
  color="green"
  textColor="white"
>
  <NodeFixture />
</styled.span>
`;
